--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </ons-modal>
 
 <ons-modal var="banner" class="banner">
-<ons-row align="center"><ons-col width="100%"><img src="img/50.png" width="80%" onclick="window.open('http://www.50djs50states.com/', '_blank', 'location=yes');"/></ons-col></ons-row>
+<ons-row align="center"><ons-col width="100%"><img src="img/50.png" width="80%" onclick="window.open('http://www.50producers50states.com/', '_blank', 'location=yes');"/></ons-col></ons-row>
 <ons-icon icon="fa-times" size="24px" fixed-width="false" style="color:white;position:absolute;top:20px;right:20px;" class="hide"></ons-icon>
 </ons-modal>
 <ons-modal var="banner1" class="banner">
@@ -57,7 +57,7 @@
 <ons-icon icon="fa-times" size="24px" fixed-width="false" style="color:white;position:absolute;top:20px;right:20px;" class="hide"></ons-icon>
 </ons-modal>
 <ons-modal var="banner2" class="banner">
-<ons-row align="center"><ons-col width="100%"><img src="img/EM.png" width="80%" onclick="window.open('http://www.50djs50states.com/', '_blank', 'location=yes');"/></ons-col></ons-row>
+<ons-row align="center"><ons-col width="100%"><img src="img/EM.png" width="80%" onclick="window.open('http://www.emailiachampagne.com/', '_blank', 'location=yes');"/></ons-col></ons-row>
 <ons-icon icon="fa-times" size="24px" fixed-width="false" style="color:white;position:absolute;top:20px;right:20px;" class="hide"></ons-icon>
 </ons-modal>
 
